[package]
name = "atomic-state"
version = "0.1.0"
authors = ["Kenneth Wilke <kenneth.wilke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"redis-module" = "*"

[lib]
name = "atomicstate"
crate-type = ["dylib"]